test/2/type/poly-unconstrained.err
test/2/type/poly-unconstrained.ploy:6:7-8: type error: polymorph alias 'f': polydef cannot resolve against expected free type.
  polydef type: Poly<()%Int ()%Str>
  expected type: ^0
|   g = f
        ~
