test/2/type/poly-unconstrained.ploy
polyfn f ()%(^T);
method f ()%Int 0;
method f ()%Str 'a';

main = {
  g = f
}
